After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 724631 - printing leaks a GFile
printing leaks a GFile
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Printing
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-02-18 11:49 UTC by Christian Persch
Modified: 2014-02-19 05:33 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Christian Persch 2014-02-18 11:49:05 UTC
From gtkunixprintdialog.c:

                  if (g_file_query_exists (file, NULL))
                    {
                      toplevel = get_toplevel (GTK_WIDGET (print_dialog));

                      basename = g_file_get_basename (file);
                      dirname = g_file_get_parse_name (g_file_get_parent (file));

Here the return value of g_file_get_parent() is leaked.